--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -182,7 +182,7 @@ namespace MyApp
 ```
 
 As it's not a ServiceStack feature it can be used to configure ASP .NET Core Apps with any feature, 
-e.g. we can easily configure [Marten](https://martendb.io) in an ASP .NET Core App with:
+e.g. we could also easily configure [Marten](https://martendb.io) in an ASP .NET Core App with:
 
 ```bash
 $ x mix marten
@@ -350,7 +350,7 @@ Please see the [Mix HowTo](https://gist.github.com/gistlyn/9b32b03f207a191099137
 
 ### Preserve ModularStartup configuration
 
-Whilst HostingStartup is recommended going forward, its usage optional and you can continue using ServiceStack's existing 
+Whilst HostingStartup is recommended going forward, its usage is optional and you can continue using ServiceStack's existing 
 `ModularStartup` configuration if you're on an earlier .NET Core runtime. 
 
 If you want to upgrade to .NET 6 but don't want to rewrite ServiceStack's existing `ModularStartup` configuration you can enable it
@@ -451,7 +451,7 @@ One breaking change that was unavoidable after adding .NET 6 TFM builds was need
 [UpdateOnly OrmLite APIs](https://github.com/ServiceStack/ServiceStack.OrmLite#updateonly) 
 to resolve new C# compiler ambiguous method overload errors.
 
-Previously `UpdateOnly()` APIs accepts either a lambda expression where the fields to update would be inferred by
+Previously `UpdateOnly()` APIs accepted either a lambda expression where the fields to update would be inferred by
 the constructor Expression or it could accept a Data Model Instance which requires explicitly specifying which
 Properties of the Data Model should be updated, e.g. both of these are API Examples have the same behavior:
 
@@ -471,13 +471,13 @@ db.UpdateOnlyFields(person, onlyFields: p => p.FirstName);
 db.UpdateOnlyFields(person, onlyFields: p => new { p.FirstName, p.Age });
 ```
 
-Basically if you encounter a build error after upgrading you'll need to add a `*Fields` suffix to the method name.
+Basically if you encounter a build error after upgrading you'll need to add a `*Fields` suffix to the `UpdateOnly` method name.
 
 
 ## Lets go .NET 6.0!
 
 Despite only being a minor feature release, it in some ways marks a turning point for ServiceStack where we can look beyond the
-Legacy .NET Framework and .NET Standard past and focus new features and enable deeper integrations on the single unified .NET Runtime
+Legacy .NET Framework and .NET Standard past and focus new features that enable deeper integrations on the single unified .NET Runtime
 of .NET's future, we're excited to have ServiceStack join the .NET 6 party and look forward to resume working on our next feature release.
 
 If you run into any issues please let us know in the [Customer Forums](https://forums.servicestack.net) or 
@@ -489,12 +489,12 @@ In an effort to streamline the supported runtimes ServiceStack runs on we intend
 [Microsoft .NET Framework end of support dates](https://docs.microsoft.com/en-us/lifecycle/products/microsoft-net-framework) and drop
 support for .NET v4.5 in after its support end date at **April 26, 2022**. 
 
-We're already forced to maintain multiple minimum .NET Framework version requirements in a number of packages with 3rd Party dependencies which 
+We're already forced to maintain multiple minimum .NET Framework version requirements in a number of packages with 3rd Party dependencies 
 lacking .NET 4.5 TFM builds so our packages currently have a mix of different minimum version requirements. To consolidate all .NET Framework
-builds to use a single version we plan on upgrading the **minimum version** to **.NET Framework v4.7.2** after **April 26, 2022**.
+builds to use a single version we intend on upgrading the **minimum version** to **.NET Framework v4.7.2** after **April 26, 2022**.
 
 If you're currently running ServiceStack on .NET **v4.5 or v4.6** and intend to continue updating to newer versions we encourage you to start 
 planning your upgrade to a newer .NET Framework **on or after v4.7.2**. 
 
 If you're unable to upgrade for any reason please let us know in the [Customer Forums](https://forums.servicestack.net) so we can measure
-the number of Customers affected to consider lowering our minimum .NET Framework requirements.
+the number of Customers affected for consideration in lowering our minimum .NET Framework requirements.
