--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -313,6 +313,8 @@ namespace MyApp
 }
 ```
 
+### Customize AppHost at different Startup Lifecycles
+
 To cater for all plugins, AppHost configurations can be registered at different stages within the AppHost's initialization:
 
 ```csharp
