--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -402,6 +402,28 @@ Or from our online project template creator at:
 
 # servicestack.net/start
 
+### Creating new .NET 5 projects
+
+If you're not yet ready to move to .NET 6 you can still create new project templates using older release versions of
+[ServiceStack's .NET Core project templates](https://github.com/NetCoreTemplates/).
+
+You can explore each released Project Template version by going to its GitHub Projects `/releases` page, e.g.
+[/web/releases](https://github.com/NetCoreTemplates/web/releases) then clicking on the Release `<tag>`
+to explore its contents. For the `web` template [/v27](https://github.com/NetCoreTemplates/web/tree/v27) was the last
+release to target **net5.0** in its `.csproj`.
+
+Once you know which release you want to create a new project with, use its full URL of its Source Code **.zip** archive 
+in place of the Template name, e.g:
+
+```bash
+$ mkdir ProjectName && cd ProjectName 
+$ x new https://github.com/NetCoreTemplates/web/archive/refs/tags/v27.zip
+```
+
+Alternatively if it's easier you can download **v27** release Source Code 
+[v27.zip](https://github.com/NetCoreTemplates/web/archive/refs/tags/v27.zip) archive and either rename the project and
+folder names manually or copy over the original files you want into your existing solution.
+
 ## .NET 6 `DateOnly` and `TimeOnly` Types
 
 To be able to more intently capture whole Dates and Times, .NET 6 sees the introduction of new 
