Update x new older projects docs

--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -407,22 +407,16 @@ Or from our online project template creator at:
 If you're not yet ready to move to .NET 6 you can still create new project templates of older versions of
 [.NET Core project templates](https://github.com/NetCoreTemplates/).
 
-First find the Project Template version you want by from the projects GitHub `/releases` page, e.g.
-[/web/releases](https://github.com/NetCoreTemplates/web/releases) then clicking on the Release `<tag>`
-to explore its contents. 
+Where we've added .NET 5 project template support to our online Project creator page at:
 
-For the `web` template, [/v27](https://github.com/NetCoreTemplates/web/tree/v27) was the last release to target **net5.0** 
-in its `.csproj`.
+### servicestack.net/start?tag=net5
 
-When you know which release you want, use the full URL of its Source Code **.zip** archive in place of the Template name, e.g:
+Otherwise our .NET Core project templates have had their last .NET 5.0 version tagged with `net5` which can be installed with 
+the `x` tool by using the full URL of its Source Code **.zip** archive in place of the Template name, e.g:
 
 ```bash
-$ x new https://github.com/NetCoreTemplates/web/archive/refs/tags/v27.zip ProjectName
+$ x new https://github.com/NetCoreTemplates/<template>/archive/refs/tags/net5.zip ProjectName
 ```
-
-Alternatively if it's easier you can download **v27** release Source Code 
-[v27.zip](https://github.com/NetCoreTemplates/web/archive/refs/tags/v27.zip) archive and either manually rename the project 
-and folder names or copy over the source code files you want into your existing solution.
 
 ## .NET 6 `DateOnly` and `TimeOnly` Types
 
