move *-apps out of NetCoreTemplates into sharp-apps

--- a/docs/releases/v5_0_0.md
+++ b/docs/releases/v5_0_0.md
@@ -806,7 +806,7 @@ Those who prefer starting from an Empty slate can use the `web` template to crea
 
 ### .NET Core 2.0 ServiceStack WebApp Template
 
-The only .NET Core 2.0 project template not to have a .NET Framework equivalent is [bare-app](https://github.com/NetCoreTemplates/bare-app) as it's a pre-built .NET Core 2.0 App that dramatically simplifies .NET Wep App development by enabling Websites and APIs to be developed instantly without compilation.
+The only .NET Core 2.0 project template not to have a .NET Framework equivalent is [bare-app](https://github.com/sharp-apps/bare-app) as it's a pre-built .NET Core 2.0 App that dramatically simplifies .NET Wep App development by enabling Websites and APIs to be developed instantly without compilation.
 
 <table class="table">
 <tr>
@@ -814,7 +814,7 @@ The only .NET Core 2.0 project template not to have a .NET Framework equivalent 
     <th>Sharp Apps</th>
 </tr>
 <tr>
-    <td><a href="https://github.com/NetCoreTemplates/bare-app">bare-app</a></td>
+    <td><a href="https://github.com/sharp-apps/bare-app">bare-app</a></td>
     <td align="center">
         <a href="http://rockwind-app.web-templates.io/"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/bare-app.png" width="500" /></a>
         <p><a href="http://rockwind-app.web-templates.io/">bare-app.web-templates.io</a></p>
