--- a/docs/releases/v5_2.md
+++ b/docs/releases/v5_2.md
@@ -1645,7 +1645,7 @@ makes it even easier to embed markdown content directly in web pages which works
 ```
 
 Which is now the easiest and preferred way to embed Markdown content in content-rich hybrid web pages like
-[Razor Rockstars content pages](https://github.com/NetCoreTemplates/bare-app/blob/master/rockstars/dead/cobain/index.html),
+[Razor Rockstars content pages](https://github.com/sharp-apps/bare-app/blob/master/rockstars/dead/cobain/index.html),
 or even the [blocks.html WebPage itself](https://github.com/NetCoreApps/TemplatePages/blob/master/src/wwwroot/docs/blocks.html) which
 makes extensive use of markdown.
 
@@ -2454,9 +2454,9 @@ Most development will happen within `/client` which is automatically published t
 
 #### client
 
-The difference with [bare-app](https://github.com/NetCoreTemplates/bare-app) is that the client source code is maintained in the `/client` folder and uses [Parcel JS](https://parceljs.org) to automatically bundle and publish your App to `/app/wwwroot` which is updated with live changes during development.
+The difference with [bare-app](https://github.com/sharp-apps/bare-app) is that the client source code is maintained in the `/client` folder and uses [Parcel JS](https://parceljs.org) to automatically bundle and publish your App to `/app/wwwroot` which is updated with live changes during development.
 
-The client folder also contains the npm [package.json](https://github.com/NetCoreTemplates/parcel-app/blob/master/client/package.json) which contains all npm scripts required during development.
+The client folder also contains the npm [package.json](https://github.com/sharp-apps/parcel-app/blob/master/client/package.json) which contains all npm scripts required during development.
 
 If this is the first time using Parcel, you will need to install its global CLI:
 
@@ -2479,7 +2479,7 @@ which will automatically reload web pages as it detects any file changes.
 
 To enable even greater functionality, this Web Apps template is also pre-configured with a custom Server project where you can extend your Web App with [Plugins](https://sharpscript.net/docs/sharp-apps#plugins) where all `Plugins`, `Services`, `Filters`, etc are automatically wired and made available to your Web App.
 
-This template includes a simple [ServerPlugin.cs](https://github.com/NetCoreTemplates/parcel-app/blob/master/server/ServerPlugin.cs) which contains an Empty `ServerPlugin` and `Hello` Service:
+This template includes a simple [ServerPlugin.cs](https://github.com/sharp-apps/parcel-app/blob/master/server/ServerPlugin.cs) which contains an Empty `ServerPlugin` and `Hello` Service:
 
 ```csharp
 public class ServerPlugin : IPlugin
@@ -2519,9 +2519,9 @@ One benefit of creating your APIs with C# ServiceStack Services instead of [Shar
 
     $ npm run dtos
 
-Which saves generate DTOs for all your ServiceStack Services in [dtos.ts](https://github.com/NetCoreTemplates/parcel-app/blob/master/client/dtos.ts) which can then be accessed in your TypeScript source code.
+Which saves generate DTOs for all your ServiceStack Services in [dtos.ts](https://github.com/sharp-apps/parcel-app/blob/master/client/dtos.ts) which can then be accessed in your TypeScript source code.
 
-If preferred you can instead develop Server APIs with Sharp APIs, an example is included in [/client/hello/_name.html](https://github.com/NetCoreTemplates/parcel-app/blob/master/client/hello/_name.html)
+If preferred you can instead develop Server APIs with Sharp APIs, an example is included in [/client/hello/_name.html](https://github.com/sharp-apps/parcel-app/blob/master/client/hello/_name.html)
 
 ::: v-pre
 ```hbs
@@ -2531,7 +2531,7 @@ If preferred you can instead develop Server APIs with Sharp APIs, an example is 
 
 Which as it uses the same data structure as the `Hello` Service above, can be called with ServiceStack's `JsonServiceClient` and generated TypeScript DTOs.
 
-The [/client/index.ts](https://github.com/NetCoreTemplates/parcel-app/blob/master/client/index.ts) shows an example of this where initially the App calls  the C# `Hello` ServiceStack Service:
+The [/client/index.ts](https://github.com/sharp-apps/parcel-app/blob/master/client/index.ts) shows an example of this where initially the App calls  the C# `Hello` ServiceStack Service:
 
 ```ts
 import { client } from "./shared";
