--- a/docs/releases/v5_5.md
+++ b/docs/releases/v5_5.md
@@ -2542,40 +2542,48 @@ These are the only sources `web new` looks at to create ServiceStack projects, w
 ```
 .NET Core C# Templates:
 
-   1. angular-lite-spa   .NET Core 2.1 Angular 4 Material Design Lite Webpack App
-   2. angular-spa        .NET Core 2.1 Angular 8 CLI Bootstrap App
-   3. aurelia-spa        .NET Core 2.1 Aurelia CLI Bootstrap App
-   4. bare-app        .NET Core 2.1 Bare Sharp Apps
-   5. mvc                .NET Core 2.1 MVC Website
-   6. mvcauth            .NET Core 2.2 MVC Website integrated with ServiceStack Auth
-   7. mvcidentity        .NET Core 2.2 MVC Website integrated with ServiceStack using MVC Identity Auth
-   8. mvcidentityserver  .NET Core 2.1 MVC Website integrated with ServiceStack using IdentityServer4 Auth
-   9. parcel             .NET Core 2.1 Parcel TypeScript App
-  10. parcel-app      .NET Core 2.1 Parcel Sharp Apps
-  11. razor              .NET Core 2.1 Website with ServiceStack.Razor
-  12. react-lite         .NET Core 2.1 simple + lite (npm-free) React SPA using TypeScript inc bundling + hot reloading
-  13. react-spa          .NET Core 2.1 React Create App CLI Bootstrap App
-  14. rockwind-app    .NET Core 2.1 Rockwind Sharp Apps
-  15. selfhost           .NET Core 2.1 self-hosting Console App
-  16. script             .NET Core 2.1 #Script Pages Bootstrap Website
-  17. vue-lite           .NET Core 2.1 simple + lite (npm-free) Vue SPA using TypeScript inc bundling + hot reloading
-  18. vue-nuxt           .NET Core 2.1 Nuxt.js SPA App with Bootstrap
-  19. vue-spa            .NET Core 2.1 Vue CLI Bootstrap App
-  20. vuetify-nuxt       .NET Core 2.1 Nuxt.js SPA App with Material Vuetify
-  21. vuetify-spa        .NET Core 2.1 Vue CLI App with Material Vuetify
-  22. web                .NET Core 2.1 Empty Website
+   1. angular-lite-spa   .NET 6.0 Angular 4 Material Design Lite Webpack App
+   2. angular-spa        .NET 6.0 Angular 12 CLI Bootstrap 5 App
+   3. aurelia-spa        .NET 6.0 Aurelia CLI Bootstrap App
+   4. aws-lambda         .NET 6.0 Website configured for AWS Lambda Containers
+   5. empty              .NET 6.0 Empty Web Single Project Template
+   6. grpc               .NET 6.0 gRPC Services
+   7. mvc                .NET 6.0 MVC Website
+   8. mvcauth            .NET 6.0 MVC Website integrated with ServiceStack Auth
+   9. mvcidentity        .NET 6.0 MVC Website integrated with ServiceStack using MVC Identity Auth
+  10. mvcidentityserver  .NET 6.0 MVC Website integrated with ServiceStack using IdentityServer4 Auth
+  11. nextjs
+  12. parcel             .NET 6.0 Parcel TypeScript App
+  13. razor              .NET 6.0 Website with ServiceStack.Razor
+  14. react-lite         .NET 6.0 simple + lite (npm-free) React SPA using TypeScript
+  15. react-spa          .NET 6.0 React Create App CLI Bootstrap App
+  16. script             .NET 6.0 #Script Pages Bootstrap Website
+  17. selfhost           .NET 6.0 self-hosting Console App
+  18. svelte-spa         .NET 6.0 Svelte v3 Rollup Bootstrap App
+  19. vue-desktop        .NET 6.0 Chromium Vue Desktop App
+  20. vue-lite           .NET 6.0 simple + lite (npm-free) Vue SPA using TypeScript
+  21. vue-nuxt           .NET 6.0 Nuxt.js SPA App with Bootstrap
+  22. vue-spa            .NET 6.0 Vue CLI Bootstrap App
+  23. vue-vite           .NET 6.0 Vue Vite Tailwind App
+  24. vuetify-nuxt       .NET 6.0 Nuxt.js SPA App with Material Vuetify
+  25. vuetify-spa        .NET 6.0 Vue CLI App with Material Vuetify
+  26. web                .NET 6.0 Empty Website
+  27. worker-rabbitmq    .NET 6.0 Rabbit MQ Worker Service
+  28. worker-redismq     .NET 6.0 Redis MQ Worker Service
+  29. worker-servicebus  .NET 6.0 Azure Service Bus MQ Worker Service
+  30. worker-sqs         .NET 6.0 AWS SQS MQ Worker Service
 
 .NET Framework C# Templates:
 
    1. angular-lite-spa-netfx    .NET Framework Angular 4 Material Design Lite Webpack App
-   2. angular-spa-netfx         .NET Framework Angular 8 Bootstrap cli.angular.io App
+   2. angular-spa-netfx         .NET Framework Angular 7 Bootstrap cli.angular.io App
    3. aurelia-spa-netfx         .NET Framework Aurelia Bootstrap Webpack App
    4. mvc-netfx                 .NET Framework MVC Website
    5. razor-netfx               .NET Framework Website with ServiceStack.Razor
    6. react-desktop-apps-netfx  .NET Framework React Desktop Apps
    7. react-spa-netfx           .NET Framework React Bootstrap Webpack App
-   8. selfhost-netfx            .NET Framework self-hosting HttpListener Console App
-   9. script-netfx              .NET Framework #Script Pages Bootstrap WebApp
+   8. script-netfx              .NET Framework #Script Pages Bootstrap WebApp
+   9. selfhost-netfx            .NET Framework self-hosting HttpListener Console App
   10. vue-nuxt-netfx            .NET Framework Vue Nuxt.js SPA Web App
   11. vue-spa-netfx             .NET Framework Vue Bootstrap Webpack App
   12. vuetify-nuxt-netfx        .NET Framework Vuetify Material Nuxt.js SPA Web App
@@ -2585,14 +2593,14 @@ These are the only sources `web new` looks at to create ServiceStack projects, w
 
 ASP.NET Core Framework Templates:
 
-   1. mvc-corefx         .NET Framework ASP.NET Core MVC Website
-   2. razor-corefx       .NET Framework ASP.NET Core Website with ServiceStack.Razor
-   3. react-lite-corefx  .NET Framework ASP.NET Core lite (npm-free) React SPA using TypeScript inc bundling + hot reloading
-   4. selfhost-corefx    .NET Framework ASP.NET Core self-hosting Console App
+   1. empty-corefx       .NET Framework ASP.NET Core Empty Web Single Project Template
+   2. mvc-corefx         .NET Framework ASP.NET Core MVC Website
+   3. razor-corefx       .NET Framework ASP.NET Core Website with ServiceStack.Razor
+   4. react-lite-corefx  .NET Framework ASP.NET Core lite (npm-free) React SPA using TypeScript
    5. script-corefx      .NET Framework ASP.NET Core #Script Pages Bootstrap Website
-   6. vue-lite-corefx    .NET Framework ASP.NET Core lite (npm-free) Vue SPA using TypeScript inc bundling + hot reloading
-   7. web-corefx         .NET Framework ASP.NET Core Website
-   8. empty-corefx       .NET Framework ASP.NET Core Single Project Website
+   6. selfhost-corefx    .NET Framework ASP.NET Core self-hosting Console App
+   7. vue-lite-corefx    .NET Framework ASP.NET Core lite (npm-free) Vue SPA using TypeScript
+   8. web-corefx         .NET Framework ASP.NET Core Website
 ```
 
 ## `web +` - customize mix/match projects from gists!
