Clarify upgrade options when it comes to new modular startup.

--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -352,21 +352,30 @@ Please see the [Mix HowTo](https://gist.github.com/gistlyn/9b32b03f207a191099137
 
 ### Preserve ModularStartup configuration
 
-Whilst HostingStartup is recommended going forward, its usage is optional and you can continue using ServiceStack's existing 
-`ModularStartup` configuration if you're on an earlier .NET Core runtime. 
+Whilst using `IHostingStartup` is recommended going forward, your existing `ModularStartup` classes will work without change when upgrading your projects to .NET6.
 
-If you want to upgrade to .NET 6 but don't want to rewrite ServiceStack's existing `ModularStartup` configuration you can enable it
-by calling the `Services.AddModularStartup<AppHost>()` method, e.g:
+If you want to take advantage of the new .NET6 top-level `IHostBuilder` to side-step the need for a `Startup` class, you can still reuse and preserve your modular startup
+by adding `Services.AddModularStartup<AppHost>()` method before calling `builder.Build();`, e.g:
 
 ```csharp
 var builder = WebApplication.CreateBuilder(args);
 builder.Services.AddModularStartup<AppHost>(builder.Configuration);
+
+var app = builder.Build();
+app.UseServiceStack(new AppHost());
 ```
 
-The `AppHost` registration has become slightly easier to enable ServiceStack in this release as you no longer need to manually inject 
-the `IConfiguration` class as it's now automatically populated by default:
+The `AppHost` registration has become slightly easier to enable ServiceStack in this release when using the `NetCoreAppSettings`, as you no longer need to manually inject 
+the `IConfiguration` class as it's now automatically populated by default :
 
 ```csharp
+// Previously
+app.UseServiceStack(new AppHost
+{
+    AppSettings = new NetCoreAppSettings(builder.Configuration)
+});
+
+// New
 app.UseServiceStack(new AppHost());
 ```
 
