--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -354,7 +354,7 @@ Please see the [Mix HowTo](https://gist.github.com/gistlyn/9b32b03f207a191099137
 
 Whilst using `HostingStartup` is recommended going forward, your existing `ModularStartup` classes will work without change when upgrading your projects to .NET6.
 
-If you want to take advantage of the new .NET6 top-level `IHostBuilder` to side-step the need for a `Startup` class, you can still reuse and preserve your modular startup
+If you want to take advantage of the new .NET6 top-level host builder to side-step the need for a `Startup` class, you can still reuse and preserve your modular startup
 by adding `Services.AddModularStartup<AppHost>()` method before calling `builder.Build();`, e.g:
 
 ```csharp
