Step by step migration example to IHostingStartup from net5 modular startup.

--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -386,6 +386,109 @@ As we'll be using the new `HostingStartup` model going forward we recommend migr
 To help with this you can refer to the [mix diff](https://github.com/ServiceStack/mix/commit/b56746622aa1879e3e6a8cbf835e634f05db30db) 
 showing how each of the existing mix configurations were converted to the new model.
 
+As a concrete example, lets take a look at the steps used to migrate our Chinook example application [from NET5 using the previous `Startup : ModularStartup`, to the new `HostingStartup`](https://github.com/NetCoreApps/Chinook/commit/2758af9deae9c3aa910a27134f95167f7ec6e541).
+
+#### Step 1
+Migrate your existing `ConfigureServices` and `Configure(IApplicationBuilder)` from `Startup : ModularStartup` to the top-level host builder in `Program.cs`. Eg
+
+```csharp
+var builder = WebApplication.CreateBuilder(args);
+var app = builder.Build();
+
+// Configure the HTTP request pipeline.
+if (!app.Environment.IsDevelopment())
+{
+    app.UseExceptionHandler("/Error");
+    // The default HSTS value is 30 days. 
+    // You may want to change this for production scenarios, see https://aka.ms/aspnetcore-hsts.
+    app.UseHsts();
+    app.UseHttpsRedirection();
+}
+
+app.Run();
+```
+
+#### Step 2
+
+Move your `AppHost` class to a new `Configure.AppHost.cs` file.
+
+#### Step 3
+Implement `IHostingStartup` on your AppHost with automatic initialization. Eg:
+
+```csharp
+public void Configure(IWebHostBuilder builder)
+{
+    builder.ConfigureServices(services => {
+            // Configure ASP.NET Core IOC Dependencies
+        })
+        .Configure(app => {
+            // Configure ASP.NET Core App
+            if (!HasInit)
+                app.UseServiceStack(new AppHost());
+        });
+}
+```
+
+#### Step 4
+
+Declare `assembly: HostingStartup` for your `AppHost` in the same `Configure.AppHost.cs`. Eg:
+
+```csharp
+[assembly: HostingStartup(typeof(Chinook.AppHost))]
+```
+
+#### Step 5
+
+Migrate each existing modular startup class that implements `IConfgiureServices` and/or `IConfigureApp` to use `IHostingStartup`. Eg:
+
+```csharp
+// net5.0 modular startup
+using ServiceStack;
+
+namespace Chinook
+{
+    public class ConfigureAutoQuery : IConfigureAppHost
+    {
+        public void Configure(IAppHost appHost)
+        {
+            appHost.Plugins.Add(new AutoQueryFeature {
+                MaxLimit = 1000,
+                IncludeTotal = true
+            });
+        }
+    }
+}
+```
+
+```csharp
+// net6.0 modular startup using IHostingStartup
+using Microsoft.AspNetCore.Hosting;
+using ServiceStack;
+
+[assembly: HostingStartup(typeof(Chinook.ConfigureAutoQuery))]
+
+namespace Chinook
+{
+    public class ConfigureAutoQuery : IHostingStartup
+    {
+        public void Configure(IWebHostBuilder builder)
+        {
+            builder.ConfigureAppHost(appHost =>
+            {
+                appHost.Plugins.Add(new AutoQueryFeature {
+                    MaxLimit = 1000,
+                    IncludeTotal = true
+                });
+            });
+        }
+    }
+}
+```
+
+> Remembering also that infrastructure like your `Dockerfile` or host will likely need the runtimes/SDKs updated as well.
+
+### Utilizing net5 mix templates
+
 To support older projects the [Existing ModularStartup configuration](https://gist.github.com/gistlyn/7362ea802aef361bbdc21097b6a99e0d)
 can still be used for when running on earlier .NET Core runtimes with the mix tool by setting its gist Id in the `MIX_SOURCE` 
 Environment Variable, e.g:
