--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -530,6 +530,17 @@ the `x` tool by using the full URL of its Source Code **.zip** archive in place 
 $ x new https://github.com/NetCoreTemplates/<template>/archive/refs/tags/net5.zip ProjectName
 ```
 
+## ServiceStackVS now supports Visual Studio 2022
+
+Developers that have upgraded to Visual Studio 2022 can now use the Add ServiceStack Reference tooling for C#, TypeScript, F# and VB-NET!
+
+The latest update supports both Visual Studio 2019 and 2022. If you are using an older version of Visual Studio, the [previous version can still be downloaded here](https://docs.servicestack.net/templates-install-servicestackvs#visual-studio-2013-2017).
+
+::: info
+Project templates are no longer a part of the Visual Studio Extension, instead developers can use [`x new`](https://docs.servicestack.net/templates-overview) 
+or [Getting Started](https://servicestack.net/start) page on the ServiceStack website.
+:::
+
 ## .NET 6 `DateOnly` and `TimeOnly` Types
 
 To be able to more intently capture whole Dates and Times, .NET 6 sees the introduction of new 
