Updated with embedded video in hosting model migration section of 5.13.2 release notes.

--- a/docs/releases/v5_13.md
+++ b/docs/releases/v5_13.md
@@ -144,6 +144,8 @@ to precisely control where ServiceStack is registered within its preferred ASP .
 
 ## New Modular Startup
 
+<iframe class="video-hd" src="https://www.youtube.com/embed/WgsFl0AFUdo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
 Our [Modular Startup](/modular-startup) approach has encouraged the modular configuration of ServiceStack ASP .NET Core Apps 
 using feature encapsulated configuration blocks for a number of years. This has enabled ServiceStack Apps to be easily composed
 with just the features developers need, either at project creation with servicestack.net/start page or after
