--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -1877,7 +1877,7 @@ Schema: custom
 */
 ```
 
-### Force Include Types in AddServiceStack Reference DTOs
+## Force Include Types in Native Types DTOs
 
 ServiceStack's [Add ServiceStack Reference](/add-servicestack-reference) feature carefully limits which DTOs it generates based on just the DTOs needed by different clients packages to call APIs. There's many reasons why Types aren't generated, e.g. they already exist in service client library, the APIs have [Visibility or Access restrictions](/auth-restricting-services), their built-in APIs purposefully hidden by ServiceStack to reduce bloat, etc.
 
@@ -1900,7 +1900,7 @@ public override void Configure(Container container)
 
 Add ServiceStack Reference still only generates dependent Types that your API references but the previous restrictions that prevented them from being generated will be lifted.
 
-### Metadata pages
+## Metadata pages
 
 Whilst API Explorer received most of the attention in this release (and will continue to do so in future), we've also added the ability to browse an API Contract in the viewers preferred language in the existing API **/metadata** pages, e.g:
 
@@ -1908,7 +1908,7 @@ Whilst API Explorer received most of the attention in this release (and will con
 
 The difference between them is that API Explorer is an entirely client rendered SPA that only supports modern browsers, whilst the **/metadata** pages are server rendered and should be visible in all browsers.
 
-### Process Utils
+## Process Utils
 
 Our [ProcessUtils.cs](https://github.com/ServiceStack/ServiceStack/blob/master/src/ServiceStack.Common/ProcessUtils.cs) contains useful utils for managing & running external processes cross-platform, a new feature we've added is being able to easily run a shell command asynchronously, and emit its output in real-time, e.g:
 
@@ -1918,7 +1918,7 @@ await ProcessUtils.RunShellAsync("npm run ui:build",
     onError: Console.Error.WriteLine);
 ```
 
-### ServiceStack.Text
+## ServiceStack.Text
 
 The new overloads on ServiceStack.Text's convenience serialization methods `.ToJson()`, `.ToJsv()`, `.ToCsv()` now accept a lambda for configuring a custom configuration scope to simplify its usage, e.g:
 
