branch + tag links

--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -1939,4 +1939,20 @@ Despite being a major release there should be only a few breaking changes, most 
  - Removed legacy Swift4 support
  - Removed some redundant deprecated legacy classes (e.g. #Script)
 
+### v5.14 Release and legacy fx45 branch
+
 Should you need to make changes to support a Legacy .NET v4.5 Framework, the [v5.14 Release](https://github.com/ServiceStack/ServiceStack/releases/tag/v5.14) in All Repos will let you download the source code and view the state before support for **v4.5 Framework** builds were removed.
+
+Each **v5.14** release is tagged at first commit of the new **fx45** branches in each Repository, both included below for quick reference:
+
+| fx45 branch | release |
+|------------ | ------- |
+| [ServiceStack](https://github.com/ServiceStack/ServiceStack/tree/fx45) | [v5.14 Release](https://github.com/ServiceStack/ServiceStack/releases/tag/v5.14) |
+| [ServiceStack.Text](https://github.com/ServiceStack/ServiceStack.Text/tree/fx45) | [v5.14 Release](https://github.com/ServiceStack/ServiceStack.Text/releases/tag/v5.14) |
+| [ServiceStack.Redis](https://github.com/ServiceStack/ServiceStack.Redis/tree/fx45) | [v5.14 Release](https://github.com/ServiceStack/ServiceStack.Redis/releases/tag/v5.14) |
+| [ServiceStack.OrmLite](https://github.com/ServiceStack/ServiceStack.OrmLite/tree/fx45) | [v5.14 Release](https://github.com/ServiceStack/ServiceStack.OrmLite/releases/tag/v5.14) |
+| [ServiceStack.Aws](https://github.com/ServiceStack/ServiceStack.Aws/tree/fx45) | [v5.14 Release](https://github.com/ServiceStack/ServiceStack.Aws/releases/tag/v5.14) |
+| [ServiceStack.Azure](https://github.com/ServiceStack/ServiceStack.Azure/tree/fx45) | [v5.14 Release](https://github.com/ServiceStack/ServiceStack.Azure/releases/tag/v5.14) |
+| [ServiceStack.Admin](https://github.com/ServiceStack/Admin/tree/fx45) | [v5.14 Release](https://github.com/ServiceStack/Admin/releases/tag/v5.14) |
+| [ServiceStack.Stripe](https://github.com/ServiceStack/Stripe/tree/fx45) | [v5.14 Release](https://github.com/ServiceStack/Stripe/releases/tag/v5.14) |
+| [ServiceStack.CefGlue](https://github.com/ServiceStack/ServiceStack.CefGlue/tree/fx45) | [v5.14 Release](https://github.com/ServiceStack/ServiceStack.CefGlue/releases/tag/v5.14) |
