--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -1934,12 +1934,32 @@ var json = response.ToJson();
 
 Despite being a major release there should be only a few breaking changes, most notable was dropping support for .NET Framework versions whose support will end during this release cycle.
 
- - Upgraded minimum .NET Framework version to **v4.7.2**
+### v5.14 and v6 Breaking Changes
+
  - Changed JWT to use Token Cookies by default
  - Removed legacy Swift4 support
- - Removed some redundant deprecated legacy classes (e.g. #Script)
+ - Removed redundant deprecated legacy classes (e.g. #Script)
 
-### v5.14 Release and legacy fx45 branch
+### v6 only Breaking Changes
+
+ - Upgraded minimum .NET Framework version to **v4.7.2**
+ - Removed out of support **netcoreapp2.1** targets
+ - Removed Legacy Projects:
+   - [ServiceStack.Wire](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Api.Swagger)
+   - [ServiceStack.Memory](https://github.com/ServiceStack/ServiceStack.Text/tree/fx45/src/ServiceStack.Memory)
+   - [ServiceStack.Api.Swagger](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Api.Swagger)
+   - [ServiceStack.Logging.EntLib5](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Logging.EntLib5)
+   - [ServiceStack.Razor.BuildTask](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.ServiceStack.Razor.BuildTask)
+   - [ServiceStack.OrmLite.VistaDB](https://github.com/ServiceStack/ServiceStack.OrmLite/tree/fx45/src/ServiceStack.OrmLite.VistaDB)
+   - [ServiceStack.Authentication.OAuth2](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Authentication.OAuth2)
+   - [ServiceStack.Authentication.OpenId](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Authentication.OpenId)
+   - [ServiceStack.Authentication.NHibernate](https://github.com/ServiceStack/ServiceStack/tree/fx45/src/ServiceStack.Authentication.NHibernate)
+
+::: info
+If you still need to use the functionality from any of the removed projects the easiest way to continue using them is to copy the linked projects `*.cs` source code from the **fx45** branch locally into your project
+:::
+
+### v5.14 Releases and .NET 4.5 branches
 
 Should you need to make changes to support a Legacy .NET v4.5 Framework, the [v5.14 Release](https://github.com/ServiceStack/ServiceStack/releases/tag/v5.14) in All Repos will let you download the source code and view the state before support for **v4.5 Framework** builds were removed.
 
