--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -1938,7 +1938,7 @@ Despite being a major release there should be only a few breaking changes, most 
 
  - Changed JWT to use Token Cookies by default
  - Removed legacy Swift4 support
- - Removed redundant deprecated legacy classes (e.g. #Script)
+ - Removed redundant deprecated legacy classes, e.g. #Script, S3VirtualPathProvider
 
 ### v6 only Breaking Changes
 
