--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -747,6 +747,20 @@ Where it will display our custom Form Layout in both **New User** and **Edit Use
 
 You can also use `QueryUserAuthProperties` to specify which columns to display in the results view, whilst `QueryMediaRules` can be used to control which columns start appearing at different responsive UI breakpoints for an optimized layout in smaller devices.
 
+### Requires camelCase
+
+For this first release both **API Explorer** and **Admin UI** consumes the rich metadata powering their UIs using a typed schema that expects API Responses in **camelCase**, i.e. the default JSON serialization used in ASP .NET Core.
+
+.NET Framework projects can switch to camelCase serialization with:
+
+```csharp
+JsConfig.Init(new Config {
+    TextCase = TextCase.CamelCase
+});
+```
+
+We'll look at adding support for other text casing options in a future release.
+
 ### Roadmap
 
 Our immediate goals after this release is to port the remaining ServiceStack Studio features so that **/admin-ui** becomes the one-stop shop for all Admin UI functionality shipped in ServiceStack. At which point we'll be retiring the ServiceStack Studio Desktop App since having them in **Admin UI** results greater utility, a faster UI and a much more productive dev model.
