--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -925,7 +925,7 @@ $ x ts && tsc dtos.ts
 
 While not a great hindrance, it would frequently interrupt our workflow when developing new APIs. 
 
-We're happy to announce this is now optional with the new JavaScript ServiceStack Reference support where you can now reference Typed JavaScript DTOs directly from **/types/js**
+We're happy to announce this is now optional with the new **native JavaScript Language** support where you can now reference Typed JavaScript DTOs directly from **/types/js**
 
 Since importing JavaScript doesn't require any tooling or build steps, it greatly simplifies calling ServiceStack APIs from **Vanilla JS** Apps which all our [.NET 6 Empty Project Templates](https://servicestack.net/start) now take advantage of for its now optimal friction-less dev model.
 
