--- a/docs/releases/v6.md
+++ b/docs/releases/v6.md
@@ -1160,10 +1160,6 @@ For a preview of what this looks like in action, here's the [BookingsCrud/Create
     </div>
 
     <div class="d-flex justify-content-between align-items-center">
-        <div class="d-flex-fill">
-            <SrcLink href="https://github.com/NetCoreTemplates/blazor-wasm/blob/master/MyApp.Client/Pages/BookingsCrud/Create.razor" 
-                     IconSrc="/img/blazor.svg" class="mt-2" />
-        </div>
         <div>
             <button type="submit" class="btn btn-primary">Create Booking</button>
         </div>
@@ -1562,6 +1558,8 @@ console.log(`API Says: ${api.response.result}`) //api.succeeded
 We've already seen a preview of what this looks like in [Blazor WASMs Dev Model Preview](#developer-productivity-preview) example code to create a new Booking:
 
 ```csharp
+CreateBooking request = new();
+
 ApiResult<IdResponse> api = new();
 
 async Task OnSubmit()
